<resources>
    <string name="app_name">ToDo\'s</string>

    <string name="title">Titel</string>
    <string name="description">Beschreibung</string>
    <string name="date">Datum</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">Todo List</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="all">All</string>
    <string name="count">Count</string>
    <string name="today">Today</string>

</resources>
